--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -4,22 +4,30 @@ body {
   color: white !important;
 }
 
+.bg-navbar {
+  background-color: #4d355e;
+}
+
 .nav-link {
   color: white !important;
   font-weight: bold !important;
 }
 
+.nav-link:hover {
+  color: #A9218B !important;
+}
+
 .dropdown-menu {
-  background-color: #6c757d !important;
+  background-color: #4d355e !important;
 }
 
 .dropdown-item {
   color: white !important;
 }
 
-.dropdown-item.active,
 .dropdown-item:active {
-  background-color: #A9218B !important;
+  background-color: #ffffff !important;
+  color: #A9218B !important;
 }
 
 .dropdown-item:hover {
@@ -58,7 +66,7 @@ body {
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #A9218B;
-  --bs-secondary: #6c757d;
+  --bs-secondary: #2a242e;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
@@ -66,7 +74,7 @@ body {
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 169, 33, 139;
-  --bs-secondary-rgb: 108, 117, 125;
+  --bs-secondary-rgb: 42, 36, 46;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -74,7 +82,7 @@ body {
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
   --bs-primary-text-emphasis: #440d38;
-  --bs-secondary-text-emphasis: #2b2f32;
+  --bs-secondary-text-emphasis: #110e12;
   --bs-success-text-emphasis: #0a3622;
   --bs-info-text-emphasis: #055160;
   --bs-warning-text-emphasis: #664d03;
@@ -82,7 +90,7 @@ body {
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
   --bs-primary-bg-subtle: #eed3e8;
-  --bs-secondary-bg-subtle: #e2e3e5;
+  --bs-secondary-bg-subtle: #d4d3d5;
   --bs-success-bg-subtle: #d1e7dd;
   --bs-info-bg-subtle: #cff4fc;
   --bs-warning-bg-subtle: #fff3cd;
@@ -90,7 +98,7 @@ body {
   --bs-light-bg-subtle: #fcfcfd;
   --bs-dark-bg-subtle: #ced4da;
   --bs-primary-border-subtle: #dda6d1;
-  --bs-secondary-border-subtle: #c4c8cb;
+  --bs-secondary-border-subtle: #aaa7ab;
   --bs-success-border-subtle: #a3cfbb;
   --bs-info-border-subtle: #9eeaf9;
   --bs-warning-border-subtle: #ffe69c;
@@ -170,7 +178,7 @@ body {
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
   --bs-primary-text-emphasis: #cb7ab9;
-  --bs-secondary-text-emphasis: #a7acb1;
+  --bs-secondary-text-emphasis: #7f7c82;
   --bs-success-text-emphasis: #75b798;
   --bs-info-text-emphasis: #6edff6;
   --bs-warning-text-emphasis: #ffda6a;
@@ -178,7 +186,7 @@ body {
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
   --bs-primary-bg-subtle: #22071c;
-  --bs-secondary-bg-subtle: #161719;
+  --bs-secondary-bg-subtle: #080709;
   --bs-success-bg-subtle: #051b11;
   --bs-info-bg-subtle: #032830;
   --bs-warning-bg-subtle: #332701;
@@ -186,7 +194,7 @@ body {
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
   --bs-primary-border-subtle: #651453;
-  --bs-secondary-border-subtle: #41464b;
+  --bs-secondary-border-subtle: #19161c;
   --bs-success-border-subtle: #0f5132;
   --bs-info-border-subtle: #087990;
   --bs-warning-border-subtle: #997404;
@@ -1974,13 +1982,13 @@ progress {
 
 .table-secondary {
   --bs-table-color: #000;
-  --bs-table-bg: #e2e3e5;
-  --bs-table-border-color: #b5b6b7;
-  --bs-table-striped-bg: #d7d8da;
+  --bs-table-bg: #d4d3d5;
+  --bs-table-border-color: #aaa9aa;
+  --bs-table-striped-bg: #c9c8ca;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #cbccce;
+  --bs-table-active-bg: #bfbec0;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #d1d2d4;
+  --bs-table-hover-bg: #c4c3c5;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -3056,19 +3064,19 @@ textarea.form-control-lg {
 
 .btn-secondary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #6c757d;
-  --bs-btn-border-color: #6c757d;
+  --bs-btn-bg: #2a242e;
+  --bs-btn-border-color: #2a242e;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #5c636a;
-  --bs-btn-hover-border-color: #565e64;
-  --bs-btn-focus-shadow-rgb: 130, 138, 145;
+  --bs-btn-hover-bg: #241f27;
+  --bs-btn-hover-border-color: #221d25;
+  --bs-btn-focus-shadow-rgb: 74, 69, 77;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #565e64;
-  --bs-btn-active-border-color: #51585e;
+  --bs-btn-active-bg: #221d25;
+  --bs-btn-active-border-color: #201b23;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #6c757d;
-  --bs-btn-disabled-border-color: #6c757d;
+  --bs-btn-disabled-bg: #2a242e;
+  --bs-btn-disabled-border-color: #2a242e;
 }
 
 .btn-success {
@@ -3191,19 +3199,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary {
-  --bs-btn-color: #6c757d;
-  --bs-btn-border-color: #6c757d;
+  --bs-btn-color: #2a242e;
+  --bs-btn-border-color: #2a242e;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #6c757d;
-  --bs-btn-hover-border-color: #6c757d;
-  --bs-btn-focus-shadow-rgb: 108, 117, 125;
+  --bs-btn-hover-bg: #2a242e;
+  --bs-btn-hover-border-color: #2a242e;
+  --bs-btn-focus-shadow-rgb: 42, 36, 46;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #6c757d;
-  --bs-btn-active-border-color: #6c757d;
+  --bs-btn-active-bg: #2a242e;
+  --bs-btn-active-border-color: #2a242e;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #6c757d;
+  --bs-btn-disabled-color: #2a242e;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #6c757d;
+  --bs-btn-disabled-border-color: #2a242e;
   --bs-gradient: none;
 }
 
@@ -6877,8 +6885,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-secondary-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: RGBA(86, 94, 100, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(86, 94, 100, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(34, 29, 37, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(34, 29, 37, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-success {
