--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -35,6 +35,11 @@ body {
   font-weight: 500;
 }
 
+.modal-content {
+  background-color: #4d355e !important;
+  color: #ffffff;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
