--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -45,6 +45,14 @@ body {
   color: #ac88a6 !important;
 }
 
+footer {
+  background-color: #4d355e;
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h6, .h6 {
+  color: #A9218B !important;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
