--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -57,6 +57,15 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h6, .h6 {
   display: none; /* Nasconde la barra di scorrimento */
 }
 
+.custom-opacity {
+  opacity: 0.5;
+}
+
+.custom-opacity:hover {
+  opacity: 1;
+  transition: 0.5s;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
