Added AddReview to post reviews, added GamesPage as search page

--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -41,8 +41,14 @@ body {
 }
 
 .cardbg {
-  background-color: rgba(132, 90, 165, 0.7803921569) !important;
+  background-color: rgba(88, 59, 109, 0.9058823529) !important;
   color: #d1bacd !important;
+}
+
+.card-shadow-focus:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 footer {
@@ -53,7 +59,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h6, .h6 {
   color: #c42ba3 !important;
 }
 
-#lastGamesContainer::-webkit-scrollbar {
+.remove-scrollbar::-webkit-scrollbar {
   display: none; /* Nasconde la barra di scorrimento */
 }
 
@@ -64,6 +70,14 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h6, .h6 {
 .custom-opacity:hover {
   opacity: 1;
   transition: 0.5s;
+}
+
+ul {
+  list-style: none;
+}
+
+.bg-tertiary {
+  background-color: rgba(88, 59, 109, 0.9058823529);
 }
 
 /*!
