--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -80,6 +80,14 @@ ul {
   background-color: rgba(88, 59, 109, 0.9058823529);
 }
 
+.accordion-button {
+  background-color: rgba(88, 59, 109, 0.9058823529) !important;
+}
+
+.accordion-body {
+  background-color: rgba(88, 59, 109, 0.9058823529);
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
