minor changes css footer

--- a/src/style/custom.scss
+++ b/src/style/custom.scss
@@ -3,8 +3,8 @@
 // $tertiary:#583b6de7;
 
 $primary:#E0B703;
-$secondary:#2b1015;
-$tertiary:#7F277E;
+$secondary:#1b191b;
+$tertiary:#401820;
 $custom-text-color:#D3CED3;
 
 
@@ -109,6 +109,7 @@ ul{
 .accordion-button{
   color: $primary!important;
 }
+
 
 
 @import "../../node_modules/bootstrap/scss/bootstrap.scss"
