--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 body {
-  background-color: #2b1015 !important;
+  background-color: #1b191b !important;
   color: #D3CED3 !important;
 }
 
 .bg-navbar {
-  background-color: #7F277E;
+  background-color: #401820;
 }
 
 .nav-link {
@@ -18,7 +18,7 @@ body {
 }
 
 .dropdown-menu {
-  background-color: #7F277E !important;
+  background-color: #401820 !important;
 }
 
 .dropdown-item {
@@ -36,12 +36,12 @@ body {
 }
 
 .modal-content {
-  background-color: #7F277E !important;
+  background-color: #401820 !important;
   color: #D3CED3;
 }
 
 .cardbg {
-  background-color: #7F277E !important;
+  background-color: #401820 !important;
   color: #D3CED3 !important;
 }
 
@@ -56,7 +56,7 @@ body {
 }
 
 footer {
-  background-color: #7F277E;
+  background-color: #401820;
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
@@ -81,15 +81,15 @@ ul {
 }
 
 .bg-tertiary {
-  background-color: #7F277E;
+  background-color: #401820;
 }
 
 .accordion-button {
-  background-color: #7F277E !important;
+  background-color: #401820 !important;
 }
 
 .accordion-body {
-  background-color: #7F277E;
+  background-color: #401820;
 }
 
 .accordion-button {
@@ -127,7 +127,7 @@ ul {
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #E0B703;
-  --bs-secondary: #2b1015;
+  --bs-secondary: #1b191b;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
@@ -135,7 +135,7 @@ ul {
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 224, 183, 3;
-  --bs-secondary-rgb: 43, 16, 21;
+  --bs-secondary-rgb: 27, 25, 27;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -143,7 +143,7 @@ ul {
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
   --bs-primary-text-emphasis: #5a4901;
-  --bs-secondary-text-emphasis: #110608;
+  --bs-secondary-text-emphasis: #0b0a0b;
   --bs-success-text-emphasis: #0a3622;
   --bs-info-text-emphasis: #055160;
   --bs-warning-text-emphasis: #664d03;
@@ -151,7 +151,7 @@ ul {
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
   --bs-primary-bg-subtle: #f9f1cd;
-  --bs-secondary-bg-subtle: #d5cfd0;
+  --bs-secondary-bg-subtle: #d1d1d1;
   --bs-success-bg-subtle: #d1e7dd;
   --bs-info-bg-subtle: #cff4fc;
   --bs-warning-bg-subtle: #fff3cd;
@@ -159,7 +159,7 @@ ul {
   --bs-light-bg-subtle: #fcfcfd;
   --bs-dark-bg-subtle: #ced4da;
   --bs-primary-border-subtle: #f3e29a;
-  --bs-secondary-border-subtle: #aa9fa1;
+  --bs-secondary-border-subtle: #a4a3a4;
   --bs-success-border-subtle: #a3cfbb;
   --bs-info-border-subtle: #9eeaf9;
   --bs-warning-border-subtle: #ffe69c;
@@ -239,7 +239,7 @@ ul {
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
   --bs-primary-text-emphasis: #ecd468;
-  --bs-secondary-text-emphasis: #807073;
+  --bs-secondary-text-emphasis: #767576;
   --bs-success-text-emphasis: #75b798;
   --bs-info-text-emphasis: #6edff6;
   --bs-warning-text-emphasis: #ffda6a;
@@ -247,7 +247,7 @@ ul {
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
   --bs-primary-bg-subtle: #2d2501;
-  --bs-secondary-bg-subtle: #090304;
+  --bs-secondary-bg-subtle: #050505;
   --bs-success-bg-subtle: #051b11;
   --bs-info-bg-subtle: #032830;
   --bs-warning-bg-subtle: #332701;
@@ -255,7 +255,7 @@ ul {
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
   --bs-primary-border-subtle: #866e02;
-  --bs-secondary-border-subtle: #1a0a0d;
+  --bs-secondary-border-subtle: #100f10;
   --bs-success-border-subtle: #0f5132;
   --bs-info-border-subtle: #087990;
   --bs-warning-border-subtle: #997404;
@@ -2043,13 +2043,13 @@ progress {
 
 .table-secondary {
   --bs-table-color: #000;
-  --bs-table-bg: #d5cfd0;
-  --bs-table-border-color: #aaa6a6;
-  --bs-table-striped-bg: #cac5c6;
+  --bs-table-bg: #d1d1d1;
+  --bs-table-border-color: #a7a7a7;
+  --bs-table-striped-bg: #c7c7c7;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #c0babb;
+  --bs-table-active-bg: #bcbcbc;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #c5bfc0;
+  --bs-table-hover-bg: #c1c1c1;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -3125,19 +3125,19 @@ textarea.form-control-lg {
 
 .btn-secondary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #2b1015;
-  --bs-btn-border-color: #2b1015;
+  --bs-btn-bg: #1b191b;
+  --bs-btn-border-color: #1b191b;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #250e12;
-  --bs-btn-hover-border-color: #220d11;
-  --bs-btn-focus-shadow-rgb: 75, 52, 56;
+  --bs-btn-hover-bg: #171517;
+  --bs-btn-hover-border-color: #161416;
+  --bs-btn-focus-shadow-rgb: 61, 60, 61;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #220d11;
-  --bs-btn-active-border-color: #200c10;
+  --bs-btn-active-bg: #161416;
+  --bs-btn-active-border-color: #141314;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #2b1015;
-  --bs-btn-disabled-border-color: #2b1015;
+  --bs-btn-disabled-bg: #1b191b;
+  --bs-btn-disabled-border-color: #1b191b;
 }
 
 .btn-success {
@@ -3260,19 +3260,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary {
-  --bs-btn-color: #2b1015;
-  --bs-btn-border-color: #2b1015;
+  --bs-btn-color: #1b191b;
+  --bs-btn-border-color: #1b191b;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #2b1015;
-  --bs-btn-hover-border-color: #2b1015;
-  --bs-btn-focus-shadow-rgb: 43, 16, 21;
+  --bs-btn-hover-bg: #1b191b;
+  --bs-btn-hover-border-color: #1b191b;
+  --bs-btn-focus-shadow-rgb: 27, 25, 27;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #2b1015;
-  --bs-btn-active-border-color: #2b1015;
+  --bs-btn-active-bg: #1b191b;
+  --bs-btn-active-border-color: #1b191b;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #2b1015;
+  --bs-btn-disabled-color: #1b191b;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #2b1015;
+  --bs-btn-disabled-border-color: #1b191b;
   --bs-gradient: none;
 }
 
@@ -6946,8 +6946,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-secondary-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: RGBA(34, 13, 17, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(34, 13, 17, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(22, 20, 22, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(22, 20, 22, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-success {
